--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.4.3'
     implementation 'androidx.activity:activity-compose:1.3.1'
     implementation 'androidx.navigation:navigation-compose:2.5.3'
     implementation "androidx.compose.material:material-icons-extended:$compose_ui_version"
